--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
-PORT=9000
+PORT=5432
 JWT_SECRET=AJStackInTheFlesh
-DB_USER=AJ_Stack
-DB_PASSWORD=AJStack.2003.
-DB_HOST=localhost
+DB_USER=fol_db_user
+DB_PASSWORD=lbbdhqDBele4wWUw3uY8Ybhz3frZycGi
+DB_HOST=dpg-cvs9cler433s73c1f62g-a
 DB_PORT=5432
-DB_NAME=folDataBase
+DB_NAME=fol_db
+DATABASE_URL = postgresql://fol_db_user:lbbdhqDBele4wWUw3uY8Ybhz3frZycGi@dpg-cvs9cler433s73c1f62g-a/fol_db
